--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
                 name="email"
                 class="form-control"
                 placeholder="Enter Email"
-                
+                value="teacher@gmail.com"
               />
             </div>
             <div class="form-group pb-3">
